# daddy-config

./: .env.example  .env.testnet  .gitignore  API.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  FEE_SERVICE_ARCHITECTURE.md  MIGRATION.md  Makefile  PRODUCTION_READINESS_CHECKLIST.md  PROPERTY_BASED_TESTING.md  PROPERTY_BASED_TESTING_EXAMPLES.md  PROPERTY_BASED_TESTING_INDEX.md  PROPERTY_BASED_TESTING_SUMMARY.md  PR_SUMMARY_542_543_544_545.md  QUICK_START.md  README.md  RUNBOOK.md  SECURITY.md  SETUP_GUIDE.md  TESTNET_SETUP_GUIDE.md  deploy.ps1  deploy.sh  docker-compose.override.yml  docker-compose.yml  health-check-demo.js  package-lock.json  plan.md  run-property-tests.sh  setup-testnet.ps1  setup-testnet.sh  setup.ps1  setup.sh  test-openapi.js  vercel.json
.changeset/: config.json
.github/: dependabot.yml
abi/: README.md
api/: .env.example  .gitignore  Dockerfile  generate-openapi.ts  openapi.yaml  package-lock.json  package.json  tsconfig.json  vitest.chaos.config.ts  vitest.config.ts  vitest.integration.config.ts
backend/: .env.example  Dockerfile  generate-openapi.js  openapi.yaml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
benches/: abuse_protection.rs  batch_expiry.rs  fee_calculation.rs  settlement_storage.rs
examples/: .env.example  client-example.js  (+9 more)
fuzz/: Cargo.toml
fuzz/corpus/fuzz_validate_corridor/: seed_0  seed_1  seed_2  seed_3
fuzz/corpus/fuzz_validate_recipient_hash/: seed_5
fuzz/fuzz_targets/: fuzz_validate_amount.rs  fuzz_validate_corridor.rs  fuzz_validate_recipient_hash.rs
(+468 files in other folders)
