[package]
name = "daddy-config-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
soroban-sdk = { version = "26.1.0", features = ["testutils"] }

[dependencies.daddy-config]
path = ".."
default-features = false

[[bin]]
name = "fuzz_validate_amount"
path = "fuzz_targets/fuzz_validate_amount.rs"
test = false
doc = false

[[bin]]
name = "fuzz_validate_corridor"
path = "fuzz_targets/fuzz_validate_corridor.rs"
test = false
doc = false

[[bin]]
name = "fuzz_validate_recipient_hash"
path = "fuzz_targets/fuzz_validate_recipient_hash.rs"
test = false
doc = false
